Diseño, bdd, modelos, repository